2005-08-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/gnome.c (GNOME_ProcessClientMessage):
	reject some invalid GNOME hints

	* fvwm/stack.c (new_layer):
	filter out layers < 0

2004-10-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icons.c (DeIconify):
	defused possible endless loop when a window iconified by the
	transientfor window loses the "transient" relationship

2004-09-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	* NEWS:
	set version to 2.4.20
	released 2.4.19

	* NEWS:
	* fvwm/fvwm2.1:
	updated for 2.4.19

2004-08-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/decorations.c (struct):
	MWM hints on 64 bit machines fix

2004-07-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (GetMoveArguments):
	Fixed parsing of the Pointer option to the Move command.

2004-07-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.c (StartupStuff):
	do not ungrab the pointer while the startup functions execute
	(Done):
	ungrab the pointer only after executing the RestartFunction or
	ExitFunciton.  Otherwise these functions may not be executed if some
	other application grabs the pointer.

	* fvwm/conditional.c (CreateConditionMask):
	renamed CurrentGlobbalPageAnyDesk to CurrentGlobalPageAnyDesk

2004-07-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (RestoreWithdrawnLocation):
	fixed traveling windows if application changed gravity hint before
	recapture

2004-06-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (CheckActionType):
	(execute_complex_function):
	fixed double click patch

2004-05-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (CheckActionType):
	(execute_complex_function):
	double clicks no longer work when pressing different buttons

2004-04-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (NewMenuRoot):
	do not strip whitespace from menu names when creating a new menu

2004-04-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/virtual.c (GetDeskNumber):
	(CMD_GotoDesk):