@@ -487,6 +487,7 @@ typedef struct FvwmWindow
   rectangle title_g;
   short title_top_height;     /* title height/0 for top/bottom titles */
   rectangle icon_g;           /* geometry of the icon window */
+  short icon_border_width;
   int icon_xl_loc;            /* icon label window x coordinate */
   int icon_t_width;           /* width of the icon title window */
   int icon_p_width;           /* width of the icon pixmap window */
