@@ -1,3 +1,10 @@
+2005-10-29  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/fvwm.h (FvwmWindow):
+	* fvwm/icons.c (GetIconWindow):
+	* fvwm/events.c (HandleConfigureRequest):
+	properly handle icon border width; fixes an xterm active icon loop
+
 2005-08-04  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/gnome.c (GNOME_ProcessClientMessage):
